move other files

--- a/DigitalLogic.html
+++ b/DigitalLogic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="DigitalLogicCSS.css">
+	<link rel="stylesheet" type="text/css" href="styles/DigitalLogicCSS.css">
 	<meta charset="utf-8">
     <title>Zombie Gates!</title>
 </head>
@@ -36,13 +36,13 @@
         <p id="textStats"></p>
         <p id="textMessage"></p>
     </div>
-    <audio id="zapSound" src="zap.wav"></audio>
-    <script src="Challenges.js"></script>
-    <script src="Game.js"></script>
-    <script src="DigitalLogicJS.js"> </script>
-    <script src="Globals.js"> </script>
-    <script src="LogicGates.js"> </script>
-    <script src="DragAndDrop.js"> </script>
-    <script src="LineDrawCreate.js"> </script>
+    <audio id="zapSound" src="audio/zap.wav"></audio>
+    <script src="js/Challenges.js"></script>
+    <script src="js/Game.js"></script>
+    <script src="js/DigitalLogicJS.js"> </script>
+    <script src="js/Globals.js"> </script>
+    <script src="js/LogicGates.js"> </script>
+    <script src="js/DragAndDrop.js"> </script>
+    <script src="js/LineDrawCreate.js"> </script>
 </body>
 </html>
